--- a/requirements.txt
+++ b/requirements.txt
@@ -29,12 +29,14 @@ kombu==4.2.1
 oauthlib==2.1.0
 odfpy==1.3.6
 openpyxl==2.5.4
+opencv-python
 pycparser==2.18
 python3-openid==3.1.0
 pytz==2018.4
 PyYAML==3.12
 rcssmin==1.0.6
 requests==2.18.4
+reportlab
 requests-oauthlib==1.0.0
 rjsmin==1.0.12
 shortuuid==0.5.0
