--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,109 @@
+alabaster==0.7.10
 amqp==2.3.2
+anyjson==0.3.3
+appnope==0.1.0
 argon2-cffi==18.1.0
+attrs==17.4.0
+awesome-slugify==1.6.5
+Babel==2.5.3
+backcall==0.1.0
 billiard==3.5.0.3
 celery==4.1.1
-certifi==2018.4.16
+certifi==2018.1.18
 cffi==1.11.5
 chardet==3.0.4
+coverage==4.4.2
+decorator==4.2.1
 defusedxml==0.5.0
 diff-match-patch==20121119
-Django==2.0.6
-django-allauth==0.36.0
+Django==2.0.4
+django-allauth==0.34.0
 django-appconf==1.0.2
 django-compressor==2.2
-django-crispy-forms==1.7.2
+django-coverage-plugin==1.5.0
+django-crispy-forms==1.7.0
+django-currentuser==0.2.2
 django-debug-toolbar==1.9.1
 django-easy-audit==1.0
 django-environ==0.4.4
-django-extensions==2.0.7
+django-extensions==1.9.7
 django-extra-views==0.11.0
-django-import-export==1.0.1
+django-google-maps==0.9.0
+django-grappelli==2.11.1
+django-import-export==1.0.0
 django-invitations==1.9.2
-django-select2==6.0.2
+django-model-utils==3.0.0
+django-redis==4.8.0
+django-select2==6.1.0
 django-shortuuidfield==0.1.3
+django-test-plus==1.0.20
+django-widget-tweaks==1.4.2
+docutils==0.14
 et-xmlfile==1.0.1
+factory-boy==2.9.2
+Faker==0.8.10
+freeze==1.0.10
 googlemaps==2.5.1
 idna==2.6
+imagesize==0.7.1
+ipdb==0.10.3
+ipython==6.2.1
+ipython-genutils==0.2.0
 jdcal==1.4
+jedi==0.11.1
+Jinja2==2.10
 kombu==4.2.1
-oauthlib==2.1.0
+MarkupSafe==1.0
+numpy==1.14.5
+oauthlib==2.0.6
 odfpy==1.3.6
-openpyxl==2.5.4
-opencv-python
+olefile==0.45.1
+opencv-python==3.4.1.15
+openpyxl==2.5.3
+parso==0.1.1
+pdfkit==0.6.1
+pexpect==4.3.1
+pickleshare==0.7.4
+Pillow==4.3.0
+pluggy==0.6.0
+prompt-toolkit==1.0.15
+psycopg2==2.7.3.2
+ptyprocess==0.5.2
+py==1.5.2
 pycparser==2.18
+Pygments==2.2.0
+PyMySQL==0.8.0
+pytest==3.3.2
+pytest-django==3.1.2
+pytest-sugar==0.9.0
+python-dateutil==2.6.1
 python3-openid==3.1.0
 pytz==2018.4
 PyYAML==3.12
 rcssmin==1.0.6
+redis==2.10.6
+regex==2018.1.10
+reportlab==3.4.0
 requests==2.18.4
-reportlab
-requests-oauthlib==1.0.0
+requests-oauthlib==0.8.0
 rjsmin==1.0.12
 shortuuid==0.5.0
+simplegeneric==0.8.1
 six==1.11.0
+snowballstemmer==1.2.1
+Sphinx==1.6.5
+sphinxcontrib-websupport==1.0.1
 sqlparse==0.2.4
 tablib==0.12.1
+termcolor==1.1.0
+text-unidecode==1.1
+traitlets==4.3.2
+typing==3.6.4
 unicodecsv==0.14.1
-urllib3==1.23
+Unidecode==0.4.21
+urllib3==1.22
 vine==1.1.4
+wcwidth==0.1.7
+Werkzeug==0.12.2
 xlrd==1.1.0
 xlwt==1.3.0
